# rentbot

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  example.env  main.py  monthlyReminder.py  pyproject.toml  requirements-dev.txt  requirements.txt  sendTestMsg.py  sheet.py  test.py
.github/workflows/: deploy.yaml  rent-reminder.yaml
app/: getRents.py  gunicorn_conf.py  installSeleniumDrivers.py  main.py  monthlyReminder.py  sheet.py
app/app/: sheet.py
scripts/: fetch_bill.py  notes.md
test/: sendTestMsg.py  test_unit.py
