[project]
name = "rentbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "gspread==6.1.3",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "flake8>=2.5.5",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]
