[project]
name = "rentbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "gspread==6.1.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "poethepoet>=0.30.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.poe.tasks]
_format = "ruff format"
_isort = "isort ."
_lint = "ruff check --fix"
lint = ["_format", "_isort", "_lint"]

test-msg = "python test/sendTestMsg.py"
